--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-helmet-async": "^1.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.12.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
